k8s/api/middleware-api-doc-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: api-doc-auth
    namespace: portfoliov3-api
spec:
    basicAuth:
        secret: api-doc-auth
