k8s/api/service-api.yaml
apiVersion: v1
kind: Service
metadata:
    name: symfony-api
    namespace: portfoliov3-api
spec:
    selector:
        app: symfony-api
    ports:
        - port: 80
          targetPort: 80
