k8s/api/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
    namespace: portfoliov3-api
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
    tls:
        - hosts:
              - api.jonathanlore.fr
          secretName: api-jonathanlore-tls
    rules:
        - host: api.jonathanlore.fr
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: symfony-api
                            port:
                                number: 80
